# LDNI-based-Solid-Modeling

./: CMakeLists.txt  LICENSE  README.md
GLKLib/: CMakeLists.txt  GLK.h
LDNIcuda/: LDNIcpuOperation.cpp  LDNIcpuSolid.cpp  LDNIcpuSolid.h  LDNIcudaContouring.cu  LDNIcudaDistanceField.cu  LDNIcudaNormalProcessing.cu  LDNIcudaOperation.cu  LDNIcudaSolid.cu  LDNIcudaSolid.h  PMBody.cpp  PMBody.h  main.cpp
